# FlipSolver2d

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.user.32a3705  README.md  flipsolver2d.cpp
.github/workflows/: cmake.yml  cross-platform-build.yml  test-build.yml  ubuntu-build.yml  windows-latest build.yml
AutoBench/: CMakeLists.txt  argumentparser.cpp  argumentparser.h  benchmarkrunnerapplication.cpp  benchmarkrunnerapplication.h  benchruntable.cpp  benchruntable.h  main.cpp
FlipSolver2dLib/: CMakeLists.txt  IdentityPreconditioner.h  InversePoissonPreconditioner.h  PressureIPPCoeficients.h  PressureWeights.h  customassert.h  dynamicmatrix.cpp  dynamicmatrix.h  dynamicsparsematrix.cpp  dynamicsparsematrix.h  dynamicuppertriangularsparsematrix.cpp  dynamicuppertriangularsparsematrix.h  emitter.cpp  emitter.h  flipfiresolver.cpp  flipfiresolver.h  flipfluidsolver2d.cpp  flipfluidsolver2d.h  flipsmokesolver.cpp  flipsmokesolver.h  flipsolver2d.cpp  flipsolver2d.h  fluidcell.cpp  fluidcell.h  fluidgrid.cpp  fluidgrid.h  functions.cpp  functions.h  geometry2d.cpp  geometry2d.h  grid2d.cpp  grid2d.h  grid_sse42.cpp  grid_sse42.h  hwinfo.cpp  hwinfo.h  index2d.cpp  index2d.h  inversepoissonpreconditioner.h  lightviscosityweights.cpp  (+54 more)
FlipSolver2dLib/threading/: CMakeLists.txt  threadpool.cpp  threadpool.h
Liquid2dRender/: CMakeLists.txt  color.cpp  color.h  config.json  fluidrenderer.cpp  fluidrenderer.h  globalcallbackhandler.cpp  globalcallbackhandler.h  liquidrenderapp.cpp  liquidrenderapp.h  main.cpp  textmenurenderer.cpp  textmenurenderer.h  textrenderer.cpp  textrenderer.h  texture2d.cpp  texture2d.h  vertex.h
Liquid2dRender/include/glad/: glad.h
Liquid2dRender/scenes/: bounds_check.json  dam_break.json  double_dam_break.json  drop.json  fire_test.json  flamethrower.json  fountain.json  glass_pour.json  glugging_test.json  level_eq.json  point_fire.json  smoke_test.json  smoke_test_empty.json  test_scene.json  viscosity_bar.json  viscosity_test.json  vortex_shedding.json  waterfall.json
Liquid2dRender/src/: glad.c
Tests/: AlwaysPass.cpp  CMakeLists.txt  LightViscosityMatrixTest.cpp
Utils/: CMakeLists.txt  jsonscenereader.cpp  jsonscenereader.h
bench/: CMakeLists.txt  main.cpp
devDocs/: extrapolation PDEs.lyx  viscosity hard U.lyx  viscosity hard V.lyx  viscosity hard.lyx  viscosity simple.lyx
devDocs/matviz/: 7pnztest.py  data.txt  data_eigen.txt  matmultest.py  solvetest.py  vin.txt  viz.py  viz_eigen.py  vout.txt
devDocs/scripts/: bool_grid_viz.py  mat_grid_viz.py
