cmake_minimum_required(VERSION 3.14)

project(FlipSolver2d)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(MEMORY_SANITIZE OFF)
set(THREAD_SANITIZE OFF)
set(ALL_WARNINGS OFF)

if(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic-errors")
    if (CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
        add_compile_options(-O3 -fno-tree-vectorize)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        #add_compile_options(-Og)
    endif()

    if(ALL_WARNINGS)
        add_compile_options(-Wall -Wextra -Werror=return-type)
    endif()

    if(MEMORY_SANITIZE)
        add_compile_options(-fsanitize=address -fno-omit-frame-pointer)
        ADD_LINK_OPTIONS(-fsanitize=address -rdynamic)
    endif()

    if(THREAD_SANITIZE)
        add_compile_options(-fsanitize=thread -fno-omit-frame-pointer)
        ADD_LINK_OPTIONS(-fsanitize=thread -rdynamic)
    endif()
elseif(MSVC)
    if (CMAKE_BUILD_TYPE STREQUAL "Release")
        add_compile_options(/O2)
    endif()
endif()

set(USE_NUMPY_LOGGING ON)
if(USE_NUMPY_LOGGING)
    add_compile_definitions(NUMPY_LOGGING)
endif()

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_definitions(DEBUG)
endif()

add_subdirectory(FlipSolver2dLib)
include_directories(FlipSolver2dLib)
add_subdirectory(Liquid2dRender)
